[package]
name = "wiw-boerse"
version = "0.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]

[[bin]]
name = "wiw-boerse"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
iron = "*"
lazy_static = "*"
mysql = "*"
plugin = "*"
regex = "*"
router = "*"
rustc-serialize = "*"
staticfile = "*"
urlencoded = "*"

[dependencies.wiw]
git = "https://github.com/fenhl/wiw-web-common.git"
