[package]
name = "wiw-boerse"
version = "0.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]

[[bin]]
name = "wiw-boerse"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
chrono-tz = "*"
iron = "*"
lazy_static = "*"
mysql = "*"
plugin = "*"
regex = "*"
router = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "*"
urlencoded = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.wiw]
git = "https://github.com/fenhl/wiw-web-common.git"
